--- a/templates/rango/categories.html
+++ b/templates/rango/categories.html
@@ -8,6 +8,6 @@
     {% endif %}
     {% endfor %}
     {% else %}
-    <li><strong>There are no categories present.</strong></li>
+    <li><strong>No categories right now</strong></li>
     {% endif %}
 </ul>
