--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -25,6 +25,6 @@
 <a href="{% url 'rango:add_page' category.slug %}">Add Page</a>
 <br />
     {% else %}
-    The specified category does not exist.
+    Category does not exist.
     {% endif %}
 {% endblock %}
