--- a/templates/rango/restricted.html
+++ b/templates/rango/restricted.html
@@ -7,6 +7,6 @@
 
 {% block body_block %}
 <h1>Restricted Page</h1>
-Since you're logged in, you can see this text!
+You're logged in. You are able to see this sentence!
 <br />
 {% endblock %}
